# jobtrail

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
app/: auth.py  database.py  main.py  models.py
app/routes/: applications.py  auth.py  dashboard.py
app/templates/: auth_callback.html  base.html  dashboard.html  index.html  login.html
app/templates/partials/: application_edit_row.html  application_form.html  application_row.html  application_rows.html
tests/: conftest.py  test_applications.py  test_auth.py
